--- a/chrome-extension/settings.html
+++ b/chrome-extension/settings.html
@@ -83,7 +83,6 @@
             font-weight: 500;
             padding: 8px;
             border-radius: 0;
-            transition: background 0.2s;
         }
 
         .checkbox-label:hover {
@@ -111,7 +110,6 @@
             align-items: center;
             padding: 14px 16px;
             border-bottom: 1px solid #e5e5e5;
-            transition: background 0.2s;
         }
 
         .site-item:last-child {
@@ -167,7 +165,6 @@
             cursor: pointer;
             font-size: 11px;
             font-weight: 700;
-            transition: all 0.2s;
             text-transform: uppercase;
             letter-spacing: 0.5px;
         }
@@ -175,13 +172,10 @@
         .remove-btn:hover {
             background: #000000;
             color: #ffffff;
-            transform: translateY(-1px);
-            box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.2);
         }
 
         .remove-btn:active {
-            transform: translateY(0);
-            box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
+            background: #333;
         }
 
         .empty-state {
